--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ click==8.1.7
 Deprecated==1.2.15
 Flask==3.1.0
 Flask-Limiter==3.9.2
+gunicorn==23.0.0
 importlib_resources==6.4.5
 itsdangerous==2.2.0
 Jinja2==3.1.4
