--- a/requirements.txt
+++ b/requirements.txt
@@ -20,3 +20,28 @@ rich==13.9.4
 typing_extensions==4.12.2
 Werkzeug==3.1.3
 wrapt==1.17.0
+beautifulsoup4==4.12.3
+blinker==1.9.0
+bs4==0.0.2
+click==8.1.7
+Deprecated==1.2.15
+Flask==3.1.0
+Flask-Limiter==3.9.2
+gunicorn==23.0.0
+importlib_resources==6.4.5
+itsdangerous==2.2.0
+Jinja2==3.1.4
+limits==3.13.0
+markdown-it-py==3.0.0
+MarkupSafe==3.0.2
+mdurl==0.1.2
+numpy==2.1.3
+ordered-set==4.1.0
+packaging==24.2
+Pygments==2.18.0
+PyYAML==6.0.2
+rich==13.9.4
+soupsieve==2.6
+typing_extensions==4.12.2
+Werkzeug==3.1.3
+wrapt==1.17.0
